Added bdwgc garbage collector and fixed client project name

--- a/Magma/CMakeLists.txt
+++ b/Magma/CMakeLists.txt
@@ -1,6 +1,8 @@
 project(Magma VERSION 0.0.1 DESCRIPTION "The Magma Game Engine Library")
 
 add_subdirectory(vendor/easy_profiler)
+set(enable_cplusplus ON)
+add_subdirectory(vendor/bdwgc)
 
 add_library(${PROJECT_NAME} STATIC
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/pch.h
@@ -20,4 +22,4 @@ target_compile_definitions(${PROJECT_NAME} PRIVATE MG_EXPORT)
 target_compile_definitions(${PROJECT_NAME} PRIVATE MG_ASSERT)
 target_precompile_headers(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/pch.h)
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
-target_link_libraries(${PROJECT_NAME} easy_profiler)
+target_link_libraries(${PROJECT_NAME} gc gccpp easy_profiler)
