--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "Magma/vendor/easy_profiler"]
 	path = Magma/vendor/easy_profiler
 	url = https://github.com/yse/easy_profiler/
+[submodule "Magma/vendor/bdwgc"]
+	path = Magma/vendor/bdwgc
+	url = https://github.com/ivmai/bdwgc
+	branch = release-8_2
