--- a/Magma/CMakeLists.txt
+++ b/Magma/CMakeLists.txt
@@ -1,8 +1,6 @@
-
 add_subdirectory(vendor/easy_profiler)
 add_subdirectory(vendor/googletest)
-set(enable_cplusplus ON) # C++ support for garbage collector
-add_subdirectory(vendor/bdwgc)
+add_subdirectory(vendor/spdlog)
 
 project(Magma VERSION 0.0.1 DESCRIPTION "The Magma Game Engine Library")
 
@@ -12,6 +10,8 @@ add_library(${PROJECT_NAME} STATIC
     
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Core/Application.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Core/Application.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Core/Logger.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Core/Logger.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Core/Entry.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Core/Platform.h
 )
@@ -24,7 +24,7 @@ target_compile_definitions(${PROJECT_NAME} PRIVATE MG_EXPORT)
 target_compile_definitions(${PROJECT_NAME} PRIVATE MG_ASSERT)
 target_precompile_headers(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/pch.h)
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
-target_link_libraries(${PROJECT_NAME} gc gccpp easy_profiler gtest)
+target_link_libraries(${PROJECT_NAME} easy_profiler spdlog)
 
 project(MagmaTest VERSION 0.0.1 DESCRIPTION "Tests for the Magma Game Engine Library")
 
@@ -36,6 +36,8 @@ add_executable(${PROJECT_NAME}
     
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Core/Application.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Core/Application.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Core/Logger.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Core/Logger.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Core/Entry.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Core/Platform.h
 )
@@ -48,6 +50,6 @@ target_compile_definitions(${PROJECT_NAME} PRIVATE MG_EXPORT)
 target_compile_definitions(${PROJECT_NAME} PRIVATE MG_ASSERT)
 target_precompile_headers(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/pch.h)
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
-target_link_libraries(${PROJECT_NAME} gc gccpp easy_profiler gtest)
+target_link_libraries(${PROJECT_NAME} easy_profiler gtest spdlog)
 
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
