--- a/Magma/CMakeLists.txt
+++ b/Magma/CMakeLists.txt
@@ -17,6 +17,7 @@ add_library(${PROJECT_NAME} STATIC
 
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Event/Event.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Event/Event.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Event/KeyCode.h
 )
 
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
@@ -46,6 +47,7 @@ add_executable(${PROJECT_NAME}
 
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Event/Event.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Event/Event.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Event/KeyCode.h
 )
 
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
