--- a/Magma/CMakeLists.txt
+++ b/Magma/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(vendor/easy_profiler)
 add_subdirectory(vendor/googletest)
 add_subdirectory(vendor/spdlog)
+add_subdirectory(vendor/glfw)
 
 project(Magma VERSION 0.0.1 DESCRIPTION "The Magma Game Engine Library")
 
@@ -14,10 +15,13 @@ add_library(${PROJECT_NAME} STATIC
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Core/Logger.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Core/Entry.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Core/Platform.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Core/Window.h
 
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Event/Event.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Event/Event.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Event/KeyCode.h
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Platform/MacOS/Window.cpp
 )
 
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
@@ -28,7 +32,7 @@ target_compile_definitions(${PROJECT_NAME} PRIVATE MG_EXPORT)
 target_compile_definitions(${PROJECT_NAME} PRIVATE MG_ASSERT)
 target_precompile_headers(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/pch.h)
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
-target_link_libraries(${PROJECT_NAME} easy_profiler spdlog)
+target_link_libraries(${PROJECT_NAME} easy_profiler spdlog glfw)
 
 project(MagmaTest VERSION 0.0.1 DESCRIPTION "Tests for the Magma Game Engine Library")
 
@@ -44,10 +48,13 @@ add_executable(${PROJECT_NAME}
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Core/Logger.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Core/Entry.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Core/Platform.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Core/Window.h
 
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Event/Event.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Event/Event.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Event/KeyCode.h
+
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Platform/MacOS/Window.cpp
 )
 
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
@@ -58,6 +65,6 @@ target_compile_definitions(${PROJECT_NAME} PRIVATE MG_EXPORT)
 target_compile_definitions(${PROJECT_NAME} PRIVATE MG_ASSERT)
 target_precompile_headers(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/pch.h)
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
-target_link_libraries(${PROJECT_NAME} easy_profiler gtest spdlog)
+target_link_libraries(${PROJECT_NAME} easy_profiler gtest spdlog glfw)
 
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
