--- a/Magma/CMakeLists.txt
+++ b/Magma/CMakeLists.txt
@@ -113,4 +113,4 @@ add_library(${PROJECT_NAME} STATIC
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/vendor/imgui)
-target_link_libraries(${PROJECT_NAME} glfw)
+target_link_libraries(${PROJECT_NAME} glfw Vulkan::Vulkan)
