--- a/Client/CMakeLists.txt
+++ b/Client/CMakeLists.txt
@@ -42,4 +42,4 @@ add_dependencies(${PROJECT_NAME} Shaders)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
 target_link_libraries(${PROJECT_NAME} Magma)
 
-file(COPY assets DESTINATION ${CMAKE_BINARY_DIR}/${PROJECT_NAME})
+add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/assets/ ${EXECUTABLE_OUTPUT_PATH}/assets/)
