Fixed hardcoded renderer

--- a/Magma/CMakeLists.txt
+++ b/Magma/CMakeLists.txt
@@ -2,7 +2,9 @@ add_subdirectory(vendor/spdlog)
 add_subdirectory(vendor/glfw)
 add_subdirectory(vendor/glm)
 
-find_package(Vulkan REQUIRED)
+if (MAGMA_RENDERER_VULKAN)
+    find_package(Vulkan REQUIRED)
+endif()
 
 project(Magma VERSION 0.0.1 DESCRIPTION "The Magma Game Engine Library")
 
@@ -24,10 +26,17 @@ target_compile_definitions(${PROJECT_NAME} PRIVATE MG_ASSERT)
 target_compile_definitions(${PROJECT_NAME} PRIVATE MG_ASSERTIONS_ENABLED)
 target_precompile_headers(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/pch.h)
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)
-target_link_libraries(${PROJECT_NAME} spdlog glfw ImGui Vulkan::Vulkan glm_shared)
+if (MAGMA_RENDERER_VULKAN)
+    target_compile_definitions(${PROJECT_NAME} PRIVATE MG_VULKAN)
+    target_link_libraries(${PROJECT_NAME} spdlog glfw ImGui Vulkan::Vulkan glm_shared)
+else ()
+    target_compile_definitions(${PROJECT_NAME} PRIVATE MG_OPENGL)
+    target_link_libraries(${PROJECT_NAME} spdlog glfw ImGui glm_shared)
+endif()
 
 project(ImGui VERSION 0.0.1 DESCRIPTION "The Magma Engine ImGui Build")
 
+if (MAGMA_RENDERER_VULKAN)
 add_library(${PROJECT_NAME} STATIC
     ${CMAKE_CURRENT_SOURCE_DIR}/vendor/imgui/imconfig.h
     ${CMAKE_CURRENT_SOURCE_DIR}/vendor/imgui/imgui_draw.cpp
@@ -46,6 +55,31 @@ add_library(${PROJECT_NAME} STATIC
     ${CMAKE_CURRENT_SOURCE_DIR}/vendor/imgui/backends/imgui_impl_vulkan.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/vendor/imgui/backends/imgui_impl_vulkan.h
 )
+else ()
+add_library(${PROJECT_NAME} STATIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/imgui/imconfig.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/imgui/imgui_draw.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/imgui/imgui_demo.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/imgui/imgui_internal.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/imgui/imgui_tables.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/imgui/imgui_widgets.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/imgui/imgui.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/imgui/imgui.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/imgui/imstb_rectpack.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/imgui/imstb_textedit.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/imgui/imstb_truetype.h
+    
+    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/imgui/backends/imgui_impl_glfw.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/imgui/backends/imgui_impl_glfw.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/imgui/backends/imgui_impl_opengl3_loader.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/imgui/backends/imgui_impl_opengl3.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/vendor/imgui/backends/imgui_impl_opengl3.h
+)
+endif()
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/vendor/imgui)
-target_link_libraries(${PROJECT_NAME} glfw Vulkan::Vulkan)
+if (MAGMA_RENDERER_VULKAN)
+    target_link_libraries(${PROJECT_NAME} glfw Vulkan::Vulkan)
+else ()
+    target_link_libraries(${PROJECT_NAME} glfw)
+endif()
