Moved all vulkan stuff to its own branch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ project(MagmaEngine VERSION 0.0.1 DESCRIPTION "The Magma Game Engine")
 if (APPLE)
     set(MAGMA_RENDERER_VULKAN ON)
     message(STATUS "Renderer: Vulkan for MacOS")
+    message(FATAL_ERROR "Vulkan renderer is currently not supported. You can you the Vulkan branch an experimental Vulcan renderer")
 else ()
     set(MAGMA_RENDERER_OPENGL ON)
     message(STATUS "Renderer: OpenGL 4")
