Switched opengl renderer to version 3.3 and changed some stuff in cmake to make it run on windows

--- a/Client/CMakeLists.txt
+++ b/Client/CMakeLists.txt
@@ -44,4 +44,8 @@ endif()
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
 target_link_libraries(${PROJECT_NAME} Magma)
 
+if (MSVC)
+add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/assets/ ${EXECUTABLE_OUTPUT_PATH}/${CMAKE_BUILD_TYPE}/assets/)
+else ()
 add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/assets/ ${EXECUTABLE_OUTPUT_PATH}/assets/)
+endif()
