--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-set(LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}/lib")
+set(LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}/bin")
 set(EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}/bin")
 
 project(MagmaEngine VERSION 0.0.1 DESCRIPTION "The Magma Game Engine")
@@ -15,7 +15,7 @@ if (APPLE)
     message(FATAL_ERROR "Vulkan renderer is currently not supported. You can you the Vulkan branch an experimental Vulcan renderer")
 else ()
     set(MAGMA_RENDERER_OPENGL ON)
-    message(STATUS "Renderer: OpenGL 4")
+    message(STATUS "Renderer: OpenGL 3")
 endif()
 
 add_subdirectory(Client)
