Ported opengl implementation to new rendering api

--- a/Magma/CMakeLists.txt
+++ b/Magma/CMakeLists.txt
@@ -6,16 +6,67 @@ if (MAGMA_RENDERER_VULKAN)
     find_package(Vulkan REQUIRED)
 endif()
 
+if (MAGMA_RENDERER_OPENGL)
+    find_package(OpenGL REQUIRED)
+endif()
+
 project(Magma VERSION 0.0.1 DESCRIPTION "The Magma Game Engine Library")
 
-file (GLOB_RECURSE CPP_SOURCE_FILES
-    "src/Magma/*.cpp"
-    "src/Magma/*.h"
+file (GLOB_RECURSE CORE_SOURCE_FILES
+    "src/Magma/Core/*.cpp"
+    "src/Magma/Core/*.h"
+)
+
+file (GLOB_RECURSE EVENT_SOURCE_FILES
+    "src/Magma/Event/*.cpp"
+    "src/Magma/Event/*.h"
+)
+
+file (GLOB_RECURSE PLATFORM_LINUX_SOURCE_FILES
+    "src/Magma/Platform/Linux/*.cpp"
+    "src/Magma/Platform/Linux/*.h"
+)
+
+file (GLOB_RECURSE PLATFORM_WINDOWS_SOURCE_FILES
+    "src/Magma/Platform/Windows/*.cpp"
+    "src/Magma/Platform/Windows/*.h"
+)
+
+file (GLOB_RECURSE PLATFORM_MACOS_SOURCE_FILES
+    "src/Magma/Platform/MacOS/*.cpp"
+    "src/Magma/Platform/MacOS/*.h"
+)
+
+file (GLOB_RECURSE PLATFORM_OPENGL_SOURCE_FILES
+    "src/Magma/Platform/OpenGL/*.cpp"
+    "src/Magma/Platform/OpenGL/*.h"
+)
+
+file (GLOB_RECURSE RENDERER_SOURCE_FILES
+    "src/Magma/Renderer/*.cpp"
+    "src/Magma/Renderer/*.h"
 )
 
 add_library(${PROJECT_NAME} STATIC
-    ${CPP_SOURCE_FILES}
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/pch.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Magma.h
+    ${CORE_SOURCE_FILES}
+    ${EVENT_SOURCE_FILES}
+    ${PLATFORM_LINUX_SOURCE_FILES}
+    ${PLATFORM_WINDOWS_SOURCE_FILES}
+    ${PLATFORM_MACOS_SOURCE_FILES}
+    ${PLATFORM_OPENGL_SOURCE_FILES}
+    ${RENDERER_SOURCE_FILES}
 )
+
+source_group("Interface" FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/pch.h ${CMAKE_CURRENT_SOURCE_DIR}/src/Magma/Magma.h)
+source_group("Core" FILES ${CORE_SOURCE_FILES})
+source_group("Event" FILES ${EVENT_SOURCE_FILES})
+source_group("Platform/Linux" FILES ${PLATFORM_LINUX_SOURCE_FILES})
+source_group("Platform/Windows" FILES ${PLATFORM_WINDOWS_SOURCE_FILES})
+source_group("Platform/MacOS" FILES ${PLATFORM_MACOS_SOURCE_FILES})
+source_group("Platform/OpenGL" FILES ${PLATFORM_OPENGL_SOURCE_FILES})
+source_group("Renderer" FILES ${RENDERER_SOURCE_FILES})
 
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     target_compile_definitions(${PROJECT_NAME} PRIVATE _DEBUG)
@@ -29,8 +80,10 @@ target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/sr
 if (MAGMA_RENDERER_VULKAN)
     target_compile_definitions(${PROJECT_NAME} PRIVATE MG_VULKAN)
     target_link_libraries(${PROJECT_NAME} spdlog::spdlog glfw ImGui stb_image Vulkan::Vulkan glm::glm)
-else ()
+elseif (MAGMA_RENDERER_OPENGL)
     target_compile_definitions(${PROJECT_NAME} PRIVATE MG_OPENGL)
+    target_link_libraries(${PROJECT_NAME} spdlog::spdlog glfw ImGui stb_image OpenGL32 glm::glm Glad)
+else ()
     target_link_libraries(${PROJECT_NAME} spdlog::spdlog glfw ImGui stb_image glm::glm Glad)
 endif()
 
