--- a/Client/CMakeLists.txt
+++ b/Client/CMakeLists.txt
@@ -1,11 +1,13 @@
 project(Client VERSION 0.0.1 DESCRIPTION "The Test Playground for Magma")
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -fdeclspec -fPIC")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fdeclspec -fPIC")
-
-file (GLOB_RECURSE GLSL_SOURCE_FILES
+file (GLOB_RECURSE GLSL_SPIRV_SOURCE_FILES
     "assets/Vulkan/*.frag"
     "assets/Vulkan/*.vert"
+)
+
+file (GLOB_RECURSE GLSL_SOURCE_FILES
+    "assets/*.frag"
+    "assets/*.vert"
 )
 
 file (GLOB_RECURSE CPP_SOURCE_FILES
@@ -18,10 +20,13 @@ add_executable(${PROJECT_NAME}
     ${GLSL_SOURCE_FILES}
 )
 
+source_group("Shaders/Vulkan" FILES ${GLSL_SPIRV_SOURCE_FILES})
+source_group("Shaders/OpenGL" FILES ${GLSL_SOURCE_FILES})
+
 if (APPLE)
 set(GLSL_COMPILER "$ENV{HOME}/VulkanSDK/1.3.239.0/macOS/bin/glslc") # FIXME: Hardcoded
 
-foreach(GLSL ${GLSL_SOURCE_FILES})
+foreach(GLSL ${GLSL_SPIRV_SOURCE_FILES})
     set(SPIRV "${GLSL}.spv")
     add_custom_command(
         OUTPUT ${SPIRV}
@@ -37,12 +42,12 @@ add_custom_target(
 )
 
 add_dependencies(${PROJECT_NAME} Shaders)
-
-target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
-target_link_libraries(${PROJECT_NAME} Magma)
 else()
 message(STATUS "Please compile shaders manually, automic shader compilation is only supported on macos currently")
 endif()
+
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/src)
+target_link_libraries(${PROJECT_NAME} Magma)
 
 if (MSVC)
 add_custom_command(TARGET ${PROJECT_NAME} PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/assets/ ${EXECUTABLE_OUTPUT_PATH}/${CMAKE_BUILD_TYPE}/assets/)
